tests/rosetta/out/C/burrows-wheeler-transform.c
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:58:58Z
// Generated by Mochi compiler v0.10.28 on 2025-07-18T09:58:58Z
#include <stdio.h>
#include <stdlib.h>
#include <string.h>

typedef struct {
  int len;
  char **data;
} list_string;
static list_string list_string_create(int len) {
  list_string l;
  l.len = len;
  l.data = calloc(len, sizeof(char *));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}
static list_string concat_list_string(list_string a, list_string b) {
  list_string r = list_string_create(a.len + b.len);
  for (int i = 0; i < a.len; i++)
    r.data[i] = a.data[i];
  for (int i = 0; i < b.len; i++)
    r.data[a.len + i] = b.data[i];
  return r;
}
static char *concat_string(char *a, char *b) {
  size_t len1 = strlen(a);
  size_t len2 = strlen(b);
  char *buf = (char *)malloc(len1 + len2 + 1);
  memcpy(buf, a, len1);
  memcpy(buf + len1, b, len2);
  buf[len1 + len2] = '\0';
  return buf;
}
static char *slice_string(char *s, int start, int end) {
  int len = strlen(s);
  if (start < 0)
    start += len;
  if (end < 0)
    end += len;
  if (start < 0)
    start = 0;
  if (end > len)
    end = len;
  if (start > end)
    start = end;
  char *buf = (char *)malloc(end - start + 1);
  memcpy(buf, s + start, end - start);
  buf[end - start] = '\0';
  return buf;
}
static char *stx = "\x02";
static char *etx = "\x03";

typedef struct {
  int err;
  char *res;
} tmp_item_t;
typedef struct {
  int len;
  tmp_item_t *data;
} tmp_item_list_t;
tmp_item_list_t create_tmp_item_list(int len) {
  tmp_item_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

typedef struct {
  int err;
  char *res;
} tmp_item1_t;
typedef struct {
  int len;
  tmp_item1_t *data;
} tmp_item1_list_t;
tmp_item1_list_t create_tmp_item1_list(int len) {
  tmp_item1_list_t l;
  l.len = len;
  l.data = calloc(len, sizeof(tmp_item1_t));
  if (!l.data && len > 0) {
    fprintf(stderr, "alloc failed\n");
    exit(1);
  }
  return l;
}

int contains(char *s, char *ch) {
  int i = 0;
  while (i < strlen(s)) {
    if (slice_string(s, i, i + 1) == ch) {
      return 1;
    }
    i = i + 1;
  }
  return 0;
}

list_string sortStrings(list_string xs) {
  list_string arr = xs;
  int n = arr.len;
  int i = 0;
  while (i < n) {
    int j = 0;
    while (j < n - 1) {
      if ((strcmp(arr.data[j], arr.data[j + 1]) > 0)) {
        char *tmp = arr.data[j];
        arr.data[j] = arr.data[j + 1];
        arr.data[j + 1] = tmp;
      }
      j = j + 1;
    }
    i = i + 1;
  }
  return arr;
}

int bwt(char *s) {
  if (contains(s, stx) || contains(s, etx)) {
    return (tmp_item_t){.err = 1, .res = ""};
  }
  char *tmp1 = concat_string(stx, s);
  char *tmp2 = concat_string(tmp1, etx);
  s = tmp2;
  int le = strlen(s);
  list_string table = list_string_create(0);
  int i = 0;
  while (i < le) {
    char *rot = slice_string(s, i, le) + slice_string(s, 0, i);
    list_string tmp3 = list_string_create(1);
    tmp3.data[0] = rot;
    list_string tmp4 = concat_list_string(table, tmp3);
    table = tmp4;
    i = i + 1;
  }
  table = sortStrings(table);
  char *last = "";
  i = 0;
  while (i < le) {
    last = last + slice_string(table.data[i], le - 1, le);
    i = i + 1;
  }
  return (tmp_item1_t){.err = 0, .res = last};
}

char *ibwt(char *r) {
  int le = strlen(r);
  list_string table = list_string_create(0);
  int i = 0;
  while (i < le) {
    list_string tmp5 = list_string_create(1);
    tmp5.data[0] = "";
    list_string tmp6 = concat_list_string(table, tmp5);
    table = tmp6;
    i = i + 1;
  }
  int n = 0;
  while (n < le) {
    i = 0;
    while (i < le) {
      table.data[i] = slice_string(r, i, i + 1) + table.data[i];
      i = i + 1;
    }
    table = sortStrings(table);
    n = n + 1;
  }
  i = 0;
  while (i < le) {
    if (slice_string(table.data[i], le - 1, le) == etx) {
      return slice_string(table.data[i], 1, le - 1);
    }
    i = i + 1;
  }
  return "";
}

char *makePrintable(char *s) {
  char *out = "";
  int i = 0;
  while (i < strlen(s)) {
    char *ch = slice_string(s, i, i + 1);
    if ((strcmp(ch, stx) == 0)) {
      char *tmp7 = concat_string(out, "^");
      out = tmp7;
    } else if ((strcmp(ch, etx) == 0)) {
      char *tmp8 = concat_string(out, "|");
      out = tmp8;
    } else {
      char *tmp9 = concat_string(out, ch);
      out = tmp9;
    }
    i = i + 1;
  }
  return out;
}

int mochi_main() {
  list_string examples = list_string_create(6);
  examples.data[0] = "banana";
  examples.data[1] = "appellee";
  examples.data[2] = "dogwood";
  examples.data[3] = "TO BE OR NOT TO BE OR WANT TO BE OR NOT?";
  examples.data[4] = "SIX.MIXED.PIXIES.SIFT.SIXTY.PIXIE.DUST.BOXES";
  examples.data[5] = "\x02ABC\x03";
  for (int tmp10 = 0; tmp10 < 6; tmp10++) {
    int t = examples.data[tmp10];
    printf("%d\n", makePrintable(t));
    int res = bwt(t);
    if ((res.data["err"])) {
      printf(" --> ERROR: String can't contain STX or ETX\n");
      printf(" -->\n");
    } else {
      int enc = (char *)(res.data["res"]);
      printf("%s\n", " --> " + makePrintable(enc));
      char *r = ibwt(enc);
      char *tmp11 = concat_string(" --> ", r);
      printf("%s\n", tmp11);
    }
    printf("\n");
  }
}

int _mochi_main() {
  mochi_main();
  return 0;
}
int main() { return _mochi_main(); }
